Fixed paragraph spacing
I have updated the styling to fix the line height of the paragraphs

--- a/src/css/main.pref.css
+++ b/src/css/main.pref.css
@@ -47,6 +47,7 @@ h5, h6 {
 
 p {
   margin-top: 0;
+  line-height: 2;
 }
 
 main {
